# trg2

./: CMakeLists.txt  README
android/: .project  AndroidManifest.xml
android/jni/: Android.mk  Application.mk  README
android/res/values/: strings.xml
android/src/io/thp/trg2/android/: GameActivity.java  GameRenderer.java  GameView.java
click/: manifest.json  trg2.desktop  trg2.json
data/: LICENSE
data/sounds/: baalcrap.it
src/: aimbar.cpp  aimbar.h  animation.cpp  animation.h  cloud.h  coinbucketsprite.cpp  coinbucketsprite.h  config.h  credits.cpp  credits.h  crosshairs.cpp  crosshairs.h  event.h  font.cpp  font.h  gameover.cpp  gameover.h  gamescene.cpp  gamescene.h  gamethread.cpp  gamethread.h  inputgesture.h  landscape.cpp  landscape.h  main-sdl2.cpp  main.cpp  menu.cpp  menu.h  mirror.h  parallaxsprite.cpp  parallaxsprite.h  physicalrabbit.cpp  physicalrabbit.h  rabbitgame.cpp  rabbitgame.h  rabbitsprite.cpp  rabbitsprite.h  soundplayer-sdl.cpp  soundplayer-stub.cpp  soundplayer.cpp  (+29 more)
